compiler/testData/diagnostics/testsWithJsStdLib/jvmDeclarations/cloneable.kt
import kotlin.<!UNRESOLVED_REFERENCE!>Cloneable<!>

fun cloneable(): <!UNRESOLVED_REFERENCE!>Cloneable<!> = intArrayOf(42)
